mdapi/Custom/objects/SI_Rollout__c.object
<CustomObject>
    <description>This is used by the SF.com team as part of our change management process.  
System Issue Rollout Schedule</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>This is the department which uses this rollout date</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Yardi</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_from_Email_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field for a Rollout having one or more SIRs that are deployed by 5:30 p.m. on the date of the Rollout.</inlineHelpText>
        <label>Exclude from Email Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Deploy_Date__c</fullName>
        <label>QA Deploy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Signoff_Date__c</fullName>
        <label>QA Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>Production Deploy date</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                    <default>true</default>
                    <label>Planning</label>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Quality Assurance Testing</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Testing</fullName>
                </value>
                <value>
                    <fullName>Awaiting Deployment</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rollout</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>Release_Date__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2014</fullName>
        <columns>Release_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>.14</value>
        </filters>
        <label>2014</label>
    </listViews>
    <listViews>
        <fullName>X2014_Releases</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2014</value>
        </filters>
        <label>2014 Releases</label>
    </listViews>
    <listViews>
        <fullName>X2015</fullName>
        <columns>Release_Date__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>.15</value>
        </filters>
        <label>2015</label>
    </listViews>
    <listViews>
        <fullName>X2016</fullName>
        <columns>Release_Date__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>.16</value>
        </filters>
        <label>2016</label>
    </listViews>
    <listViews>
        <fullName>X2017</fullName>
        <columns>Release_Date__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>.17</value>
        </filters>
        <label>2017</label>
    </listViews>
    <nameField>
        <label>Rollout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>